# pyproject.toml

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "viskan"
version = "0.1.0"
description = "Viskan"
authors = ["Saaketh Koundinya <three2saki@gmail.com>"]

[tool.poetry.dependencies]
python >= "^3.6"
torch >= "1.13.1"
torchvision >= "0.8.1"
timm >= "0.3.2"

[tool.poetry.dev-dependencies]
# Add any development dependencies here if needed
